# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([timeutil], [0.1], [2chernov@gmail.com])

AC_CONFIG_SRCDIR([timeutil/timeutil.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11 -Wall -Werror no-define subdir-objects])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

